ELEMENTS-1230: fix overflow in nuxeo-data-table

--- a/widgets/selectivity/selectivity.css
+++ b/widgets/selectivity/selectivity.css
@@ -109,9 +109,7 @@
 
 .selectivity-multiple-input-container {
   cursor: text;
-  max-height: 10em;
   min-height: calc(2em + 4px);
-  overflow: auto;
   padding: 5px;
 }
 
